Payload based template generation from Intruder selections
* the attack type is currently hard-coded